--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
 
         <div class="content">
 
+            <div class="boxes">
+
+                <div class="box-1">
+
+                    <h1 class="txt-1">Buy Now</h1>
+                    <h1 class="txt-1">Add to Cart</h1>
+
+                </div>
+
+                <div class="box-2"></div>
+                <div class="box-3"></div>
+
+            </div>
+
         </div>
 
         <div class="footer">
