content basics done

--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
 
                 </div>
 
-                <div class="box-2"></div>
-                <div class="box-3"></div>
+                <div class="box-2">
+                    <h1 class="txt-2">Buy Now</h1>
+                    <h1 class="txt-2">Add to Cart</h1>
+                </div>
+
+                <div class="box-3">
+                    <h1 class="txt-3">Buy Now</h1>
+                    <h1 class="txt-3">Add to Cart</h1>
+                </div>
 
             </div>
 
