--- a/index.html
+++ b/index.html
@@ -12,42 +12,46 @@
 
     <div class="main">
 
-        <div class="nav">
-            <h1>Home</h1>
-            <h1>About</h1>
+        <div class="page-1">
 
-            <img class="Logo" src="Logo.png" alt="">
+            <div class="nav">
+                <h1>Home</h1>
+                <h1>About</h1>
 
-            <h1>Products</h1>
-            <h1>Cart</h1>
-        </div>
+                <img class="Logo" src="Logo.png" alt="">
 
-        <div class="content">
+                <h1>Products</h1>
+                <h1>Cart</h1>
+            </div>
 
-            <div class="boxes">
+            <div class="content">
 
-                <div class="box-1">
+                <div class="boxes">
 
-                    <h1 class="txt-1">Buy Now</h1>
-                    <h1 class="txt-1">Add to Cart</h1>
+                    <div class="box-1">
 
-                </div>
+                        <h1 class="txt-1">Buy Now</h1>
+                        <h1 class="txt-1">Add to Cart</h1>
 
-                <div class="box-2">
-                    <h1 class="txt-2">Buy Now</h1>
-                    <h1 class="txt-2">Add to Cart</h1>
-                </div>
+                    </div>
 
-                <div class="box-3">
-                    <h1 class="txt-3">Buy Now</h1>
-                    <h1 class="txt-3">Add to Cart</h1>
+                    <div class="box-2">
+                        <h1 class="txt-2">Buy Now</h1>
+                        <h1 class="txt-2">Add to Cart</h1>
+                    </div>
+
+                    <div class="box-3">
+                        <h1 class="txt-3">Buy Now</h1>
+                        <h1 class="txt-3">Add to Cart</h1>
+                    </div>
+
                 </div>
 
             </div>
 
-        </div>
-
-        <div class="footer">
+            <div class="footer">
+                <h1>More Content Coming Soon 😊 </h1>
+            </div>
 
         </div>
 
