--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
 
                     <div class="box-1">
 
-                        <h1 class="txt-1">Buy Now</h1>
-                        <h1 class="txt-1">Add to Cart</h1>
+                        <div class="box1_1"><img src="packs.jpeg" alt=""></div>
+
+                        <div class="box1_2">
+                            <h1 class="txt-1">Buy Now</h1>
+                            <h1 class="txt-1">Add to Cart</h1>
+                        </div>
 
                     </div>
 
